
syntax = "proto3";

package api.core.v1;

import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "api/core/v1/search.proto";
import "api/core/v1/list.proto";


option go_package = "github.com/tkeel-io/core/api/core/v1;v1";
option java_multiple_files = true;
option java_package = "api.core.v1";

service Entity {
	rpc CreateEntity (CreateEntityRequest) returns (EntityResponse) {
		option (google.api.http) = {
			post : "/plugins/{plugin}/entities"
			body: "properties"
		};
	};
	rpc UpdateEntity (UpdateEntityRequest) returns (EntityResponse) {
		option (google.api.http) = {
			put : "/plugins/{plugin}/entities/{id}"
			body : "properties"
		};
	};
    rpc PatchEntity (PatchEntityRequest) returns (EntityResponse) {
        option (google.api.http) = {
            patch: "/plugins/{plugin}/entities/{id}"
            body: "properties"
        };
    };
    rpc PatchEntityZ (PatchEntityRequest) returns (EntityResponse) {
        option (google.api.http) = {
            put: "/plugins/{plugin}/entities/{id}/patch"
            body: "properties"
        };
    };
	rpc DeleteEntity (DeleteEntityRequest) returns (DeleteEntityResponse) {
		option (google.api.http) = {
			delete : "/plugins/{plugin}/entities/{id}"
		};
	};
	rpc GetEntity (GetEntityRequest) returns (EntityResponse) {
		option (google.api.http) = {
			get : "/plugins/{plugin}/entities/{id}"
		};
	};
	rpc ListEntity (ListEntityRequest) returns (ListEntityResponse) {
		option (google.api.http) = {
			post : "/plugins/{plugin}/entities/search"
            body: "*"
		};
	};
	rpc AppendMapper (AppendMapperRequest) returns (EntityResponse) {
		option (google.api.http) = {
			post : "/plugins/{plugin}/entities/{id}/mappers"
			body: "mapper"
		};
	};
    rpc SetEntityConfigs(SetEntityConfigRequest) returns (EntityResponse) {
        	option (google.api.http) = {
			put : "/plugins/{plugin}/entities/{id}/configs"
			body: "configs"
		};
    };
}

message EntityObject {
	string uid = 1;
}

message CreateEntityRequest {
    string id = 1;
    string plugin = 2;
    string source = 3;
    string owner = 4;
    string type = 5;
    google.protobuf.Value properties = 6;
 }


message EntityResponse {
    string id = 1;
    string plugin = 2;
    string source = 3;
    string owner = 4;
    string type = 5;
    repeated MapperDesc mappers = 6;
    google.protobuf.Value configs = 7;
    google.protobuf.Value properties = 8;
}

message UpdateEntityRequest {
    string id = 1;
    string plugin = 2;
    string source = 3;
    string owner = 4;
    google.protobuf.Value properties = 5;
}


message PatchData {
    string path = 1;
    string operator = 2;
    google.protobuf.Value value = 3;
}


message PatchDatas {
    repeated PatchData properties = 1;
}

message PatchEntityRequest {
    string id = 1;
    string plugin = 2;
    string source = 3;
    string owner = 4;
    google.protobuf.Value properties = 5;
}

message DeleteEntityRequest {
    string id = 1;
    string plugin = 2;
    string source = 3;
    string owner = 4;
}
message DeleteEntityResponse {
    string id = 1;
    string status = 2;
}

message GetEntityRequest {
    string id = 1;
    string plugin = 2;
    string source = 3;
    string owner = 4;
}

message MapperDesc {
    string name = 1;
    string tql = 2;
}

message AppendMapperRequest {
    string id = 1;
    string plugin = 2;
    string source = 3;
    string owner = 4;
    MapperDesc mapper = 5;
}


message ListEntityRequest {
    string plugin = 1;
    string source = 2;
    string owner = 3;
    string query = 4;
    Pager page = 5;
	repeated SearchCondition condition = 6;
}
message ListEntityResponse {
    int64 total = 1;
    int64 page = 2;
    int64 limit = 3;
    int64 offset = 4;
    repeated EntityResponse items = 5;
}

message PropertyConfig {}

message SetEntityConfigRequest {
    string id = 1;
    string plugin = 2;
    string source = 3;
    string owner = 4;
    google.protobuf.Value configs = 5;
}
