
syntax = "proto3";

package api.core.v1;

import "google/api/annotations.proto";
import "api/core/v1/entity.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/tkeel-io/core/api/core/v1;v1";
option java_multiple_files = true;
option java_package = "api.core.v1";

service TS {
	rpc GetTSData (GetTSDataRequest) returns (GetTSDataResponse) {
		option (google.api.http) = {
			post : "/ts/{id}"
            body : "*"
		};
	};
	rpc DownloadTSData (DownloadTSDataRequest) returns (DownloadTSDataResponse) {
		option (google.api.http) = {
			get: "/ts/{id}"

		};
	};
	rpc GetLatestEntities (GetLatestEntitiesRequest) returns (GetLatestEntitiesResponse) {
		option (google.api.http) = {
			get : "/ts"
		};
	};
}


message GetTSDataRequest {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
              json_schema: {
                title: "GetTSData"
                description: "获取时序数据"
              }
            };
    string id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "实体id"}];
    int64 start_time = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "起始时间"}];
    int64 end_time = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "终止时间"}];
    string identifiers = 4 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "标识符"}];
    int32 page_num= 5 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "记录开始位置"}];
    int32 page_size = 6 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "每页限制条数"}];
}

message GetTSDataResponse {
    int32 total = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "结果总数"}];
    int32 page_num= 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "记录开始位置"}];
    int32 page_size = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "每页限制条数"}];
    repeated TSResponse items = 5 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "结果列表"}];
}

message TSResponse {
    int64 time = 1;
    map<string, float> value = 2;
}

message DownloadTSDataRequest {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
              json_schema: {
                title: "GetTSData"
                description: "下载时序数据"
              }
            };
    string id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "实体id"}];
    int64 start_time = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "起始时间"}];
    int64 end_time = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "终止时间"}];
    string identifiers = 4 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "标识符"}];
}

message DownloadTSDataResponse {
    bytes data = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "数据内容"}];
    string length = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "数据长度"}];
    string filename = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "文件名"}];
}

message GetLatestEntitiesRequest {

}

message GetLatestEntitiesResponse {
    int64 total = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "结果总数"}];
    repeated EntityResponse items = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "最新的实体数据列表"}];
}